[workspace]
members = [
  "core/",
  "codegen/",
  "graphics/",
  "inputs/",
  "scene2d/",
]

[package]
name = "lazybox"
version = "0.1.0"
authors = ["Thomas Koehler <basta.t.k+git@gmail.com>",
           "Romain Vaillant <rph.vaillant@gmail.com>"]

[dependencies]
lazybox_graphics = { path = "graphics" }
lazybox_inputs = { path = "inputs" }

[features]
unstable = []
default = ["u16_handle"]
u16_handle = []
