[workspace]
members = [
  "core/",
  "codegen/",
  "scene2d/",
]

[package]
name = "lazybox"
version = "0.1.0"
authors = ["Thomas Koehler <basta.t.k+git@gmail.com>",
           "Romain Vaillant <rph.vaillant@gmail.com>"]

[dependencies]
lazybox_core = { path = "core" }

[features]
unstable = []
default = ["u16_handle"]
u16_handle = []
