[workspace]
members = [
  "core/",
  "codegen/",
  "scene2d/",
  "cli/"
]

[package]
name = "lazybox"
version = "0.1.0"
authors = ["Thomas Koehler <basta.t.k+git@gmail.com>",
           "Romain Vaillant <rph.vaillant@gmail.com>"]

[dependencies]
lazybox_core = { path = "core" }
lazybox_scene2d = { path = "scene2d" }