[package]
workspace = ".."
name = "lazybox_core"
version = "0.1.0"
authors = ["Thomas Koehler <basta.t.k+git@gmail.com>"]

[dependencies]
rayon = { version = "^0.6", features = ["unstable"] }
nalgebra = "^0.11"
parking_lot = "^0.3"
crossbeam = "^0.2"
vec_map = "^0.6"
bit-set = "^0.4"
daggy = "^0.4"
fnv = "^1.0"
mopa = "^0.2"
approx = "^0.1"
yaml-rust = "^0.3"

[features]
unstable = []
default = ["u16_handle"]
u16_handle = []
