[package]
name = "lazybox_ecs"
version = "0.1.0"
authors = ["Romain Vaillant <rph.vaillant@gmail.com>"]

[dependencies]
parking_lot = "0.3"
crossbeam = "0.2"
vec_map = "0.6"
bit-set = "0.4"
mopa = "0.2"
daggy = "0.4"
fnv = "1.0"
serde = "0.8"
erased-serde = "0.1"
rayon = { version = "0.6.0", features = ["unstable"] }

[features]
unstable = []
default = ["u16_handle"]
u16_handle = []